examples/test/testpolicy2428.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2428
  namespace: namespace428
spec:
  podSelector:
    matchLabels:
      key27: value45
      key45: value43
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key43: value48
          key21: value30
      podSelector:
        matchLabels:
          key12: value44
